k8s/qa/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: employee-qa
  labels:
    environment: qa
    app: employee-management
