k8s/qa/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: employee-qa
  labels:
    app: employee-management
    environment: qa
spec:
  type: ClusterIP
  selector:
    app: employee-management
    environment: qa
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
